plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'org.foxycue'
version '0.2'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.0'
}

sourceCompatibility = '21'
targetCompatibility = '21'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'org.foxycue.foxycue'
  mainClass = 'org.foxycue.foxycue.Main'
}
jar {
  manifest {
    attributes "Main-Class": 'org.foxycue.foxycue.Main'
  }
//  from {
//    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
//  }
}
javafx {
  version = '21'
  modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
  implementation('org.controlsfx:controlsfx:11.1.2')
  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.17.0'
  implementation ('com.google.code.gson:gson:2.11.0')
  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

jlink {
  targetPlatform("win") {
    //jdkHome = 'C:\Users\_redfox\.jdks\openjdk-21.0.1'
    //addExtraModulePath("/usr/lib/openjfx/win/jmods")
  }
  jpackage {
    icon = "src/main/resources/org/foxycue/foxycue/icon.ico"
  }
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher{
    name = 'FoxyCue'
    jvmArgs = ['-Dlog4j.configurationFile=./log4j2.xml']
  }
}
test {
useJUnitPlatform()}

//jlink {
//  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
//  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
//  launcher {
//    name = 'app'
//  }
//}

jlinkZip {
  group = 'distribution'
}

java {
  modularity.inferModulePath = true
}